# AI-assistant

./: .gitignore  README.md  chat_assistant.py  gui_streamlit.py  mypy.ini  pyproject.toml  requirements.txt  spotify_test.ipynb  test_file.md  week2 EXERCISE.ipynb
.github/workflows/: CI.yml
ai_utils/: ai_utils.py
src/: chat_assistant.py  gui_streamlit.py
src/ai_utils/: __init__.py  ai_utils.py  response_utils.py
src/chat_assistant/: base_assistant.py  master_chat_assistant.py
src/tool_base/: __init__.py  tool_base.py
src/tool_creator/: __init__.py  create.py
src/tool_loader/: create.py  loader.py
src/tools/: __init__.py  create.py  mode_resetter.py  recipe_creator.py  tool.py  wikipedia_fact_checker.py
src/tools/_tools/: __init__.py  recipe_creator.py  spotify_playlist_creator.py  wikipedia_fact_checker.py
src/tools/_tools/spotify_playlist_creator/: __init__.py  spotify.py  spotify_playlist_creator.py
src/tools/mail_assistant/: __init__.py  mail_assistant.py  mail_mode_switcher.py
src/tools/mail_assistant/mail_assistant_tools/: delete.py  email_utils.py  summarize.py
src/tools/spotify_playlist_creator/: __init__.py  spotify.py  spotify_playlist_creator.py
tests/component_tests/: test_chat_assistant.py  test_fail_ONLY_FOR_DEBUGGING.py  test_master_chat_assistant.py
tests/component_tests/tool/: test_create.py  test_loader.py
tools/: __init__.py  create.py  spotify_tool.py  spotify_utils.py  tool.py
tools/_tools/: __init__.py  recipe_creator.py  spotify_playlist_creator.py  wikipedia_fact_checker.py
tools/tools/: spotify_playlist_creator.py
tools/utils/: spotify.py
(+3 files in other folders)
